<resources>
    <string name="app_name">Coll Driver</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_final_space">Map</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="call_help">Call Us</string>
    <string name="mail_help">Mail Us</string>
    <string name="wallet">Wallet</string>
    <string name="Trips">Your Trips</string>
    <string name="customer">Customer Care</string>
    <string name="users_settings">User Settings</string>
    <string name="no">No,Thanks</string>
    <string name="yes">Yes</string>
    <string name="gps_not_found_message">Please enable your location service</string>
    <string name="gps_not_found_title">Location Service is disabled</string>
    <string name="location_not_found_message">Please enable your network</string>
    <string name="location_not_found_title">Network service is disabled</string>
    <string name="logout">Log Out</string>
    <string-array name="Institute">
        <item>Institute of Technology</item>
        <item>Institute of Management</item>
        <item>Faculty of Doctoral Studies and Research</item>
        <item>Institute of Pharmacy</item>
        <item>Institute of Science</item>
        <item>Institute of Law</item>
        <item>Institute of Architecture and Planning</item>
        <item>Institute of Commerce</item>
        <item>Department of Design</item>
    </string-array>
    <string-array name="Profession" id="Pro">
        <item>Student</item>
        <item>Faculty/Staff</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="CarType">
        <item>Hatchback</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Coupe</item>
        <item>Convertible</item>
        <item>Wagon</item>
        <item>Van</item>
        <item>Jeep</item>
    </string-array>
    <string name="DriverInfo">Driver\'s Info</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="loc">Location</string>
    <string name="menu">Open Menu</string>

</resources>
