<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    tool:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/userprofile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/users_settings" />
        <item
            android:id="@+id/your_trips"
            android:icon="@drawable/ic_airline_seat_recline_extra_black_24dp"
            android:title="@string/Trips" />
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/wallet"
            />
        <item
            android:title="@string/logout"
            android:id="@+id/logout"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />
    </group>
    <item android:title="@string/customer">
        <menu>
            <item
                android:title="@string/mail_help"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:id="@+id/helpmail"
                />
            <item android:title="@string/call_help"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:id="@+id/helpcall"/>
        </menu>
    </item>
</menu>